syntax = "proto3";

import "Protos/model.proto";

service NetGrpcService {	
	rpc communicate (MedicineAvailabilityMessage) returns (MedicineAvailabilityResponse);	
}